--- a/src/components/TraceInfoDrawer/TraceInfoDrawer.module.scss
+++ b/src/components/TraceInfoDrawer/TraceInfoDrawer.module.scss
@@ -16,7 +16,7 @@
     
     }
     *::-webkit-scrollbar {
-        width: 16px;
+        display: none;
       }
     
       *::-webkit-scrollbar-track {
